samples/_failures_safe/1761660940_2c276e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8e83e115.c: In function ‘main’:
./samples/SAFE/__tmp_8e83e115.c:153:5: error: expected declaration or statement at end of input
  153 |     size_t num_events = sizeof(events) / sizeof(events[0]);
      |     ^~~~~~
